<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="lang"
            app:title="@string/lang_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/startup_header">

        <ListPreference
            app:entries="@array/startup_entries"
            app:entryValues="@array/startup_values"
            app:defaultValue="op"
            app:key="startup"
            app:title="@string/startup_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>