<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Fragment1">

    <TextView
        android:id="@+id/textView1_fr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@id/editText1_fr1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@null"
        android:gravity="top|start"
        android:padding="5dp"
        android:hint="@string/eng_help_text"
        android:inputType="textMultiLine|textNoSuggestions"
        android:scrollbars="vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1_fr1" />

    <TextView
        android:id="@+id/textView2_fr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ro"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1_fr1" />

    <EditText
        android:id="@+id/editText2_fr1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="top|start"
        android:textSize="16sp"
        android:background="@null"
        android:inputType="none"
        android:editable="false"
        android:padding="5dp"
        android:hint="@string/txt_in_ro"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_fr1" />

</androidx.constraintlayout.widget.ConstraintLayout>