<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoToEng">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:textColor="@color/black"
        android:textOff="@string/text_off1"
        android:textOn="@string/text_on1"
        android:thumbTint="@color/colorAccent"
        android:trackTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="409dp"
        android:layout_height="508dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1">

    </FrameLayout>

    <Button
        android:id="@+id/buttonSalvare1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="4dp"
        android:text="@string/salvare_text_tradus"
        android:padding="5dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame1" />

</androidx.constraintlayout.widget.ConstraintLayout>